--- a/README.org
+++ b/README.org
@@ -33,6 +33,14 @@ its content.
 
 ** March 2022
 
+*** 08-Mar-22
++ [[https://hal.inria.fr/hal-03596267/document][Synthetic Kolmogorov complexity in Coq]]. ~ Yannick Forster,Fabian Kunze, Nils Lauermann. #ITP #Coq
++ [[https://people.eng.unimelb.edu.au/rizkallahc/theses/jack-drury-postgrad-project-report.pdf][Information flow aware languages (Kuifje emerges from the Shadows)]]. ~ Jack Drury. #ITP #IsabelleHOL
++ [[https://arxiv.org/abs/2203.03054][Verification of Bitcoin's smart contracts in Agda using weakest preconditions for access control]]. ~ Fahad F. Alhabardi, Arnold Beckmann, Bogdan Lazar, Anton Setzer. #ITP #Agda #Blockchain #Cryptocurrency
++ [[https://leanprover-community.github.io/blog/posts/month-in-mathlib-feb-2022/][This month in mathlib (Feb 2022)]]. #ITP #LeanProver #Mathlib #Math
++ [[https://mmhaskell.com/blog/2022/3/7/running-with-monads][Running with monads]]. ~ James Bowen (@james_OWA). #Haskell #FunctionalProgramming
++ [[https://irreal.org/blog/?p=10373][Reading RSS with elfeed]]. #Emacs
+
 *** 07-Mar-22
 + [[https://www.isa-afp.org/entries/ResiduatedTransitionSystem.html][Residuated transition systems (in Isabelle/HOL)]]. ~ Eugene W. Stark. #ITP #IsabelleHOL
 + [[https://www.isa-afp.org/entries/Independence_CH.html][The independence of the continuum hypothesis in Isabelle/ZF]]. ~ Emmanuel Gunther, Miguel Pagano, Pedro Sánchez Terraf, Matías Steinberg. #ITP #IsabelleZF #Math
