--- a/README.org
+++ b/README.org
@@ -33,6 +33,11 @@ its content.
 
 ** March 2022
 
+*** 24-Mar-22
++ [[https://www.isa-afp.org/entries/Ackermanns_not_PR.html?utm_source=dlvr.it&utm_medium=twitter][Ackermann's function is not primitive recursive]]. ~ Lawrence C. Paulson (@LawrPaulson). #ITP #IsabelleHOL
++ [[https://well-typed.com/blog/2022/03/large-records-without-the-quotes/][New large-records release: now with 100% fewer quotes]]. ~ Edsko de Vries. #Haskell #FunctionalProgramming
++ [[https://theconversation.com/leonardo-verne-y-las-inteligencias-multiples-artificiales-109015][Leonardo, Verne y las inteligencias múltiples artificiales]]. ~ Francisco Fernández de Vega. #IA
+
 *** 23-Mar-22
 + [[https://lawrencecpaulson.github.io/2022/03/23/Locales.html][Type classes versus locales]]. ~ Lawrence C Paulson (@LawrPaulson). #ITP #IsabelleHOL
 + [[https://reasonablypolymorphic.com/blog/proof-carrying-code/index.html][Review: Proof-Carrying Code]]. ~ Sandy Maguire. #Agda #FunctionalProgramming #ITP
