--- a/README.org
+++ b/README.org
@@ -12,6 +12,7 @@ its content.
 * Content                                                                      :TOC:
 - [[#readings-of-the-year-2022][Readings of the year 2022]]
   - [[#april-2022][April 2022]]
+- [[#22-abr-22][22-Abr-22]]
   - [[#march-2022][March 2022]]
   - [[#february-2022][February 2022]]
   - [[#january-2022][January 2022]]
@@ -33,6 +34,13 @@ its content.
 * Readings of the year 2022
 
 ** April 2022
+
+* 22-Abr-22
++ [[https://www.isa-afp.org/entries/Multiset_Ordering_NPC.html][The generalized multiset ordering is NP-complete]]. ~ René Thiemann & Lukas Schmidinger. #ITP #IsabelleHOL
++ [[https://luctielen.com/posts/create_recursion_schemes_using_comonads/][Create recursion-schemes using comonads]]. ~ Luc Tielen (@luctielen). #Haskell #FunctionalProgramming
++ [[https://watch.softinio.com/w/tgDXLAUEAhGooiJiskwCFy][Namespaced DeBruijn indices]]. ~ Gabriella Gonzalez  (@GabriellaG439). #Haskell #FunctionalProgramming
++ [[https://medium.com/@alvaro3chess/why-should-you-try-elm-20f33607976f][Why should you try Elm? ~ Álvaro Sánchez (@Forensor)]]. #Elm #FunctionalProgramming
++ [[https://archive.org/details/BubliothecaMathematicaStephenColeKleeneIntroductionToMetamathematicsWoltersNoordhoffPublishing1971][Introduction to metamathematics]]. ~ Stephen Cole Kleene (1952). #eBook #Logic #Math via @internetarchive
 
 *** 21-Abr-22
 + [[https://andraskovacs.github.io/pdfs/phdthesis_compact.pdf][Type-theoretic signatures for algebraic theories and inductive types]]. ~ András Kovács. #PhD_Thesis #ITP #Agda
